# cs2kz-metamod

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  launch.vs.json  shared.cmake
.github/workflows/: build-push-and-pr.yaml
src/: cs2kz.h
src/kz/db/: setup_database.cpp
src/kz/global/: messages.cpp
src/kz/mode/: kz_mode_ckz.h
src/kz/style/: kz_style_autobhop.h  kz_style_legacy_jump.h
src/movement/: mv_player.cpp
src/protobuf/: base_gcmessages.pb.h  kz_replay.pb.cc  kz_replay.pb.h  source2_steam_stats.pb.h  usercmd.pb.h  usermessages.pb.h
